--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>プラよび｜将来のキャリアに繋げる大学予備校</title>
-  <meta name="description" content="つばさ学習塾は、小学生から高校生まで対応した個別指導塾です。一人ひとりに合わせたカリキュラムで成績アップ・志望校合格を全力サポート。無料体験授業受付中。" />
+  <title>プラよび｜大学受験予備校</title>
+  <meta name="description" content="大津市に根差した大学受験予備校" />
 
   <!-- Fonts (Studioテンプレに近い雰囲気) -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -70,7 +70,7 @@
       <div class="hero__inner">
         <div class="hero__copy">
           <p class="hero__lead">未来を切り拓く</p>
-          <h1 class="hero__title">少人数制で目が届く指導だから、わからないところもその場で解決。学ぶ楽しさを実感しながら、志望校合格を目指せます。</h1>
+          <h1 class="hero__title">プロのコーチングの技で生徒様のやる気を思い切り引き出し、完全オーダーメイド学習戦略を組んでいるからこそ、塾生は前向きな気持ちで、勉強をコツコツ続けています。</h1>
 
           <div class="hero__actions">
             <a class="btn btn--primary btn--pill" href="#https://line.me/R/ti/p/%40wnz8865c">
@@ -96,7 +96,7 @@
           <div class="card__icon"><i class="fa-solid fa-people-arrows"></i></div>
           <h3 class="card__title">一人ひとりに合わせた授業</h3>
           <p class="card__text">
-            得意・苦手、目標、生活リズムに合わせて学習計画を設計。理解度に合わせて「戻り学習」も柔軟に対応します。
+            学年に関わらず、「テキストの使い方」「ノートの取り方」「学校の授業の受け方」をはじめとした【基礎的な勉強のやり方】を一緒に学んでいただきます。
           </p>
         </article>
 
@@ -104,7 +104,7 @@
           <div class="card__icon"><i class="fa-solid fa-book"></i></div>
           <h3 class="card__title">学習習慣を無理なく定着</h3>
           <p class="card__text">
-            課題設計と小テストで「何を・いつ・どれだけ」を明確化。続けやすい学習ルーティンを一緒に作ります。
+            小手先のテクニックではなく、一生ものの武器となる学び方・学ぶ姿勢を習得していただき、その後の人生の土台にして頂きたいと、プラよびは考えております。
           </p>
         </article>
 
@@ -112,15 +112,16 @@
           <div class="card__icon"><i class="fa-solid fa-chart-line"></i></div>
           <h3 class="card__title">成績アップにつながる見える化</h3>
           <p class="card__text">
-            到達度を定期的にチェックし、学習の優先順位を更新。保護者面談で学習状況も共有します。
+            プラよびでは入会後、全員に手帳をプレゼントしています。手帳の使い方も生徒様に丁寧に指導した上で、少しずつ手帳を使いこなせるよう に指導していきます。
           </p>
         </article>
 
         <article class="card">
           <div class="card__icon"><i class="fa-solid fa-calendar-check"></i></div>
-          <h3 class="card__title">通いやすいスケジュール</h3>
+          <h3 class="card__title">独自のノウハウを活用した定期テスト対策
+          </h3>
           <p class="card__text">
-            学校行事・部活に合わせて調整可能。振替や学習相談も含め、継続しやすい環境を整えています。
+            定期テストの対策は、生徒様がお通いの学校ごとに対策が異なります。学校の先生の出題傾向や、各学校で使用されている教材などにより、テストでの点数獲得戦略が変わってくるからです。
           </p>
         </article>
       </div>
@@ -142,7 +143,7 @@
                 <span class="course__arrow material-icons">keyboard_arrow_right</span>
               </div>
               <p class="course__text">
-                基礎学力を固め、勉強の習慣を育てるコースです。少人数制で質問しやすく、無理なく学力を伸ばします。
+                基礎学力を固め、勉強の習慣を育てるコースです。手帳によるスケジュール管理で勉強習慣の土台を形成します。
               </p>
             </div>
           </a>
@@ -183,7 +184,7 @@
     <!-- Results / Staff Tabs -->
     <section id="results" class="section">
       <div class="section__head">
-        <h2 class="section__title">合格実績・講師陣</h2>
+        <h2 class="section__title">講師陣</h2>
       </div>
 
       <div class="tabs" role="tablist" aria-label="合格実績・講師陣">
@@ -195,9 +196,9 @@
       <div class="tabPanels">
         <div class="tabPanel is-active" id="tab1" role="tabpanel">
           <ul class="bullets">
-            <li>県立守山高校／膳所高校</li>
+            <li>県立守山高校／石山高校</li>
             <li>国立大学／関関同立</li>
-            <li>定期テスト：平均＋20点アップ（例）</li>
+            <li>定期テスト：平均＋20点アップ</li>
           </ul>
         </div>
 
@@ -277,28 +278,28 @@
         <details class="faqItem">
           <summary>無料体験授業はどのような内容ですか？</summary>
           <div class="faqItem__body">
-            学習状況のヒアリング → ミニ授業 → 学習方針のご提案、の流れで実施します。
+            学習状況のヒアリング → ミニ授業 → 学習方針のご提案、ご本人様に合わせたカウンセリングの流れで実施します。
           </div>
         </details>
 
         <details class="faqItem">
           <summary>教科は選べますか？</summary>
           <div class="faqItem__body">
-            はい。主要5教科から必要科目を選択できます（学年・コースにより対応範囲は異なります）。
+            はい。主要5教科から必要科目を選択できます。
           </div>
         </details>
 
         <details class="faqItem">
           <summary>振替はできますか？</summary>
           <div class="faqItem__body">
-            事前連絡があれば振替可能です。部活や学校行事に合わせて調整できます。
+            補習という形でお取りさせていただきます。部活や学校行事に合わせて調整できます。
           </div>
         </details>
 
         <details class="faqItem">
-          <summary>保護者面談はありますか？</summary>
+          <summary>保護者カウンセリングはありますか？</summary>
           <div class="faqItem__body">
-            定期的に実施し、学習の進捗と次の課題を共有します。
+            定期的に実施し、学習の進捗とご本人様の状況を丁寧に共有いたします。
           </div>
         </details>
 
@@ -344,7 +345,7 @@
           </div>
         </div>
       </div>
-      <div class="footer__bottom">© Purayobi</div>
+      <div class="footer__bottom">Copyright © purayobi All Rights Reserved.</div>
     </footer>
   </main>
 
