--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <title>プラよび｜大学受験予備校</title>
   <meta name="description" content="大津市に根差した大学受験予備校" />
 
-  <!-- Fonts (Studioテンプレに近い雰囲気) -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&display=swap" rel="stylesheet" />
 
-  <!-- Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <script src="https://kit.fontawesome.com/1f3a1b3a1b.js" crossorigin="anonymous"></script>
 
@@ -18,7 +16,6 @@
 </head>
 
 <body>
-  <!-- Side / Bottom Nav (PC: 左固定 / SP: 下固定) -->
   <nav class="nav" aria-label="サイト内ナビ">
     <a class="brand" href="#top">
       <span class="brand__mark"><i class="fa-solid fa-dove"></i></span>
@@ -69,13 +66,14 @@
     <header class="hero">
       <div class="hero__inner">
         <div class="hero__copy">
-          <p class="hero__lead">未来を切り拓く</p>
+          <p class="hero__lead">未来を切り拓く<br>
+            学びをここから</p>
           <h1 class="hero__title">プロのコーチングの技で生徒様のやる気を思い切り引き出し、完全オーダーメイド学習戦略を組んでいるからこそ、塾生は前向きな気持ちで、勉強をコツコツ続けています。</h1>
 
           <div class="hero__actions">
             <a class="btn btn--primary btn--pill" href="#https://line.me/R/ti/p/%40wnz8865c">
               <span class="material-icons" aria-hidden="true">school</span>
-              無料体験授業を申し込む
+              無料体験に申し込む
             </a>
           </div>
         </div>
